# kyclash

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Changelog.md  Makefile.toml  README.md  eslint.config.ts  knip.json  kyclash-handoff-20260721.md  package.json  pnpm-lock.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: autobuild.yml  check-commit-needs-build.yml  dev.yml  frontend-check.yml  linux-peer-binary-manifest-v1.yml  linux-peer-credential-v2.yml  macos-system-lab.yml  network-sidecar.yml  release.yml  sync-mihomo-changelog.yml  telegram-notify.yml
.husky/: pre-commit
config/: tauri.github-updater-capability.template.json  tauri.github-updater.template.json
docs/: CONTRIBUTING_i18n.md  README_en.md
docs/architecture/: kyclash-linux-peer-v1.md  kyclash-network-runtime-v1.md  kyclash-networking-v1.md
docs/release/: kyclash-github-updater-v1.md  kyclash-macos-release-v1.md  kyclash-updater-metadata.schema.json
docs/roadmap/: kyclash-actual-child-lab-review-20260721.md  kyclash-broker-session-binding-review-20260723.md  kyclash-completion-audit-20260721.md  kyclash-dataplane-contract-review-20260721.md  kyclash-github-updater-review-20260721.md  kyclash-implementation-plan.md  kyclash-linux-peer-live-runtime-review-20260723.md  kyclash-plan-review-20260721.md  kyclash-privileged-tunnel-broker-review-20260723.md  kyclash-production-networking-plan-20260721.md  kyclash-production-networking-review-20260721.md  kyclash-production-networking-single-stage-review-20260721.md  kyclash-production-networking-work-program-20260721.md  kyclash-production-restart-rematerialization-review-20260722.md  kyclash-production-vm-lab-candidate-review-20260722.md  kyclash-route-helper-contract-review-20260721.md  kyclash-route-helper-mihomo-interface-review-20260722.md  kyclash-runtime-datagram-size-review-20260721.md  kyclash-runtime-protocol-review-20260721.md  kyclash-runtime-quic-order-review-20260721.md  kyclash-sidecar-stdio-review-20260721.md  kyclash-sidecar-stdio-v2-control-review-20260722.md  kyclash-tunnel-route-retirement-interlock-review-20260723.md  kyclash-utun-contract-review-20260721.md  kyclash-vm-external-peer-lab-review-20260723.md  kyclash-vm-network-lab-app-review-20260723.md  kyclash-vm-utun-lab-app-review-20260723.md
docs/testing/: kyclash-macos-app-managed-tun-lab.md  kyclash-macos-arm64-pkg-20260721.md  kyclash-macos-keychain-lab.md  kyclash-macos-keychain-trust-fixture.md  kyclash-macos-route-lab.md  kyclash-macos-virtualization-lab.md  kyclash-network-reliability-20260722.md  kyclash-network-runtime-measurements-20260721.md  kyclash-networking-dev-ipc-isolation-20260722.md  kyclash-production-vm-nosign-app.md  kyclash-shenzhen-readonly-acceptance-20260723.md  (+5 more)
network-sidecar/: README.md  go.mod  go.sum
schemas/: kyclash-network-production-v2.schema.json  kyclash-network.schema.json
scripts/: assert-updater-disabled.mjs  build-keychain-public-helper-macos.mjs  build-macos-production-vm-app.mjs  build-macos-production-vm-app.test.mjs  build-macos-userspace-lab-app.mjs  build-macos-vm-external-peer-lab-app.mjs  build-macos-vm-external-peer-lab-app.test.mjs  build-macos-vm-external-peer-lab-binaries.mjs  build-macos-vm-external-peer-lab-binaries.test.mjs  build-macos-vm-external-peer-lab-host-courier.mjs  build-macos-vm-external-peer-lab-host-courier.test.mjs  build-macos-vm-network-lab-harness.mjs  build-macos-vm-utun-lab-harness.mjs  build-network-sidecar-macos.mjs  build-networking-system-lab-peer-macos.mjs  build-networking-userspace-lab-sidecar-macos.mjs  build-route-helper-macos.mjs  build-system-trust-probe-macos.mjs  build-tunnel-broker-macos.mjs  build-updater-metadata.mjs  copy-networking-vm-lab-fixtures.mjs  copy-networking-vm-lab-fixtures.test.mjs  dev-networking.mjs  generate-networking-production-vm-lab.mjs  macos-package-verifier.mjs  macos-system-lab.sh  macos-vm-app-managed-tun-matrix.sh  macos-vm-capture-visible-app.command  macos-vm-keychain-trust-fixture.sh  macos-vm-keychain-trust-fixture.test.mjs  macos-vm-lab.sh  macos-vm-network-lab-authorize.command  macos-vm-route-helper-v2-matrix.sh  network-production-v2-contract.test.mjs  networking-production-policy-rust-fixture.mjs  networking-production-vm-lab-contract.test.mjs  package-macos-pkg.mjs  portable-fixed-webview2.mjs  portable.mjs  prepare-apple-notary-key.mjs  (+18 more)
src/: index.html  main.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.networking.macos.conf.json  tauri.networking.userspace-lab.macos.conf.json  tauri.networking.vm-utun-lab.macos.conf.json  tauri.windows.conf.json  webview2.arm64.json  webview2.x64.json  webview2.x86.json
src-tauri/src/: lib.rs
src-tauri/src/cmd/: mod.rs  networking.rs  networking_external_peer_lab.rs  networking_production.rs  networking_userspace_lab.rs  profile.rs  proxy.rs
src-tauri/src/config/: clash.rs  config.rs  prfitem.rs  profiles.rs  verge.rs
src-tauri/src/core/: backup.rs  service.rs  sysopt.rs  updater.rs
src-tauri/src/core/manager/: config.rs
src-tauri/src/core/tray/: mod.rs
src-tauri/src/enhance/: mod.rs  tun.rs
src-tauri/src/networking/: broker_bound_route_v3.rs  config.rs  credentials.rs  data_plane.rs  diagnostics.rs  ipc.rs  macos_route.rs  mihomo_tun_source.rs  mock.rs  mock_control.rs  mod.rs  operation.rs  policy.rs  policy_identity_store.rs  process_runtime.rs  production_composition.rs  production_controller.rs  production_policy_catalog.rs  production_route_v3.rs  production_service.rs  production_session.rs  route.rs  route_helper.rs  route_helper_client.rs  route_helper_registration.rs  route_helper_v3.rs  route_helper_v3_client.rs  sidecar.rs  sidecar_trust.rs  state.rs  stdio_runtime.rs  tunnel_broker_client.rs  vm_external_peer_lab_socket.rs  vm_network_lab_socket.rs  vm_utun_lab_socket.rs
src-tauri/src/utils/: dirs.rs  help.rs  init.rs  schtasks.rs  tmpl.rs  window_manager.rs  yaml_emitter.rs
src-tauri/src/utils/resolve/: mod.rs  window.rs
src-tauri/tests/: networking_sidecar.rs
(+328 files in other folders)
