[package]
name = "clash-verge"
version = "2.5.3"
description = "KyClash"
authors = ["zzzgydi", "Tunglies", "wonfen", "MystiPanda"]
license = "GPL-3.0-only"
repository = "https://github.com/kysion/kyclash.git"
default-run = "clash-verge"
build = "build.rs"
edition = "2024"
rust-version = "1.95"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
verge-dev = ["clash_verge_logger/color"]
tauri-dev = []
tokio-trace = ["console-subscriber"]
clippy = ["tauri/test"]
tracing = []
networking-dev = []
# Default-off production networking controller. Normal/release builds must not
# enable this feature until the N4 route-helper gate closes.
networking-production = []
# Compiles the macOS `/sbin/route` executor for explicitly authorized,
# disposable-host validation. No application command wires this feature into a
# production build.
networking-route-lab = []
networking-keychain-lab = []
# Builds the fixed-scope lab binaries without packaging application resources.
# This feature is never enabled by normal application or release builds.
networking-system-lab = ["tauri/test", "dep:aws-lc-rs"]
# Explicit no-sign App profile for the loopback userspace data-plane lab.  It
# deliberately implies the existing lab-only stdio surface and is never part
# of a normal or production feature set.
networking-userspace-lab-app = ["networking-dev", "networking-system-lab"]
# Explicit no-sign App profile that replaces only the userspace lab launch
# seam with the manually authorized, fixed-socket VirtualMac utun harness.
# It does not activate or weaken either production privileged service.
networking-vm-utun-lab-app = ["networking-userspace-lab-app"]
# Explicit no-sign App profile for the VM-backed real-utun/private-route lab.
# It shares the userspace IPC commands but connects to the fixed root-owned
# guest harness socket; it is deliberately default-off and never composes with
# production or the route-free VM-utun profile.
networking-vm-network-lab-app = ["networking-userspace-lab-app"]
# Explicit no-sign two-VirtualMac external-peer profile. It has its own
# redacted handshake, fixed root socket, async command surface, and UI. It
# deliberately does not imply the loopback/one-VM lab command module.
networking-vm-external-peer-lab-app = ["networking-system-lab"]
updater-verifier = []

[[bin]]
name = "kyclash-network-mock"
path = "src/bin/kyclash-network-mock.rs"
required-features = ["networking-dev"]

[[bin]]
name = "kyclash-route-lab"
path = "src/bin/kyclash-route-lab.rs"
required-features = ["networking-route-lab"]

[[bin]]
name = "kyclash-keychain-lab"
path = "src/bin/kyclash-keychain-lab.rs"
required-features = ["networking-keychain-lab"]

[[bin]]
name = "kyclash-keychain-public-lab"
path = "src/bin/kyclash-keychain-public-lab.rs"
required-features = ["networking-system-lab"]

[[bin]]
name = "kyclash-updater-verify"
path = "src/bin/kyclash-updater-verify.rs"
required-features = ["updater-verifier"]

[package.metadata.bundle]
identifier = "net.kysion.kyclash"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
clash-verge-draft = { workspace = true }
clash-verge-logging = { workspace = true }
clash-verge-signal = { workspace = true }
clash-verge-i18n = { workspace = true }
clash-verge-limiter = { workspace = true }
tauri-plugin-clash-verge-sysinfo = { workspace = true }
tauri-plugin-clipboard-manager = { workspace = true }
tauri = { workspace = true, features = [
  "protocol-asset",
  "devtools",
  "tray-icon",
  "image-ico",
  "image-png",
] }
parking_lot = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
compact_str = { workspace = true }
flexi_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
smartstring = { workspace = true, features = ["serde"] }
bitflags = { workspace = true }
warp = { version = "0.4.3", features = ["server"] }
open = "5.3.6"
dunce = "1.0.5"
nanoid = "0.5"
chrono = "0.4.45"
boa_engine = "0.21.1"
once_cell = { version = "1.21.4", features = ["parking_lot"] }
percent-encoding = "2.3.2"
reqwest = { version = "0.13.4", features = [
  "json",
  "cookies",
  "gzip",
  "rustls",
  "form",
] }
regex = "1.12.4"
ring = "0.17.14"
zeroize = "1.8.2"
sysproxy = { git = "https://github.com/clash-verge-rev/sysproxy-rs", features = [
  "guard",
] }
network-interface = { version = "2.0.5", features = ["serde"] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-window-state = "2.4.1"
zip = "8.6.0"
reqwest_dav = "0.3.3"
serde-xml-rs = "0.6.0"
aes-gcm = { version = "0.11.0" }
base64 = "0.22.1"
minisign-verify = "0.2.5"
semver = "1.0.28"
getrandom = "0.4.3"
futures = "0.3.32"
gethostname = "1.1.0"
scopeguard = "1.2.0"
tauri-plugin-notification = "2.3.3"
tokio-stream = "0.1.18"
backon = { version = "1.6.0", features = ["tokio-sleep"] }
tauri-plugin-http = "2.5.9"
console-subscriber = { version = "0.5.0", optional = true }
tauri-plugin-devtools = { version = "2.1.0" }
tauri-plugin-mihomo = { git = "https://github.com/clash-verge-rev/tauri-plugin-mihomo", branch = "fix/api-robustness" }
clash_verge_logger = { git = "https://github.com/clash-verge-rev/clash-verge-logger" }
async-trait = "0.1.89"
clash_verge_service_ipc = { version = "2.3.3", features = [
  "client",
], git = "https://github.com/clash-verge-rev/clash-verge-service-ipc" }
arc-swap = "1.9.2"
tokio-rustls = "0.26.4"
rustls = { version = "0.23.41", features = ["ring"] }
webpki-roots = "1.0.8"
rust_iso3166 = "0.2.0"
# Use the git repo until the next release after v2.0.0.
dark-light = { git = "https://github.com/rust-dark-light/dark-light" }
windows-sys.workspace = true
bytes = "1.12.0"
tokio-util = { version = "0.7.18", features = ["time"] }
libc = "0.2.183"
rustix = { version = "1.1.4", features = ["fs"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.7.0"
aws-lc-rs = { version = "1.17.1", default-features = false, features = ["non-fips"], optional = true }
objc2 = "0.6.4"
objc2-foundation = { version = "0.3.2", features = [
  "NSString",
  "NSDictionary",
  "NSAttributedString",
] }
objc2-app-kit = { version = "0.3.2", features = [
  "NSAttributedString",
  "NSStatusItem",
  "NSStatusBarButton",
  "NSButton",
  "NSControl",
  "NSResponder",
  "NSView",
  "NSFont",
  "NSFontDescriptor",
  "NSColor",
  "NSParagraphStyle",
  "NSStringDrawing",
  "NSText",
] }

[target.'cfg(windows)'.dependencies]
deelevate = { workspace = true }
runas = "=1.2.0"
winreg = "0.56.0"
windows = { version = "0.62.2", features = ["Win32_Globalization"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.5.1"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-updater = "2.10.1"

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3.27.0"
tauri = { workspace = true, features = ["test"] }

[lints]
workspace = true
